added self attetnion with trainable params

--- a/simple_attention.ipynb
+++ b/simple_attention.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### coding simple attention mechanism\n",
-    "#### 1.self attention without trainable weights"
+    "#### 1.simple attention without trainable weights"
    ]
   },
   {
